--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,8 +2,8 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc.exe 生成活动文件",
-            "command": "F:\\C C++ environment\\mingw64\\bin\\gcc.exe",
+            "label": "C/C++: gcc.exe build active file",
+            "command": "F:\\CCpp\\mingw64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
